helm/apps/adguard/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  namespace: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: adguard
    spec:
      securityContext:
        runAsUser: 1024
        runAsGroup: 100
        fsGroup: 100
      containers:
        - name: adguard
          image: adguard/adguardhome:latest
          ports:
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 3000
              name: http-initial
            - containerPort: 80
              name: http
          volumeMounts:
            - name: conf
              mountPath: /opt/adguardhome/conf
            - name: work
              mountPath: /opt/adguardhome/work
      volumes:
        - name: conf
          persistentVolumeClaim:
            claimName: adguard-conf
        - name: work
          persistentVolumeClaim:
            claimName: adguard-work
