helm/apps/adguard/service-dns.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns
  namespace: adguard
  annotations:
    metallb.universe.tf/address-pool: homelab-pool
    metallb.universe.tf/loadBalancerIPs: 192.168.50.129
spec:
  type: LoadBalancer
  selector:
    app: adguard
  ports:
    - name: dns-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      targetPort: 53
      protocol: TCP
