helm/apps/adguard/service-web.yml
apiVersion: v1
kind: Service
metadata:
  name: adguard-web
  namespace: adguard
spec:
  type: ClusterIP
  selector:
    app: adguard
  ports:
    - name: http
      port: 80
      targetPort: 80
