helm/apps/adguard/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: adguard
  namespace: adguard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`adguard.kds-dev.com`)
      kind: Rule
      services:
        - name: adguard-web
          port: 80
  tls: {}
